fix: Navigation tabs break the layout on mobile viewports (#1865)
* fix: Align header actions on mobile

* fix: Connect wallet word wrap on mobile

* fix: Remove sticky from tx filter form on mobile

* fix: Address feedback

--- a/src/components/common/NavTabs/styles.module.css
+++ b/src/components/common/NavTabs/styles.module.css
@@ -12,11 +12,11 @@
 }
 
 .tabs :global .MuiTabScrollButton-root:first-of-type {
-  margin-left: -24px;
+  margin-left: calc(var(--space-2) * -1);
 }
 
 .tabs :global .MuiTabScrollButton-root:last-of-type {
-  margin-right: -24px;
+  margin-right: calc(var(--space-2) * -1);
 }
 
 .tab {
